[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "apu_anomaly_detection"
version = "0.0.1"
description = "Maintenance pr\u00e9dictive et d\u00e9tection d\u2019anomalies pour le compresseur d'une unit\u00e9 de production d\u2019air (APU) d\u2019un m\u00e9tro"
authors = [
  { name = "Nidhel_Amine" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["apu_anomaly_detection"]
force_sort_within_sections = true
